tests/snapshots/tui/training_with_a_compare_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ 1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  6 Compare  rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                              │"
"│ demo_20261006-100000  succeeded  gpu                                         │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  demo_20261006-100000                                                          "
"  compare: 71% win or tie (compare_20261006-120000, 8 questions)                "
"  not followed: press a to attach                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
" j/k select · a attach · c cancel · t start · h push · x clear   v#.#.#  ? help "
